--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <div class="owl-carousel" id="home">
         <div class="item" style="background-image: url(images/2.jpg);">
             <div class="overlay-text">
-                <h1>
+                <h1 style="color:black!important;">
                     Unlock Success with Nestalent - Your Global Recruitment Partner!
                 </h1>
-                <p>
+                <p style="color:black!important;">
                     At Nestalent Consulting, we understand the
                     critical importance of being well-equipped
                     with the right professionals for business
@@ -76,22 +76,21 @@
         </div>
         <div class="item" style="background-image: url(images/4.jpg);">
             <div class="overlay-text">
-                <h1>
+                <h1 style="color:black!important;">
                     Unlock Success with Nestalent - Your Global Recruitment Partner!
                 </h1>
-                <p>
-                    Discover top talent effortlessly across the UAE, France, Luxembourg, and Switzerland with Nestalent
-                    Consulting . Specializing in IT and Sales, our dynamic recruitment services are tailored to elevate
-                    your team's performance in diverse markets.
+                <p style="color:black!important;">
+                    Discover top talents effortlessly across the UAE, GCC countries as well as France and the Benelux with Nestalent Consulting.
+ The rest remains the same.
                 </p>
             </div>
         </div>
         <div class="item" style="background-image: url(images/1.jpg);">
             <div class="overlay-text">
-                <h1>
+                <h1 style="color:black!important;">
                     Unlock Success with Nestalent - Your Global Recruitment Partner!
                 </h1>
-                <p>
+                <p style="color:black!important;">
                     We specialize in sourcing top-tier IT
                     Developers, Cybersecurity Consultants, and
                     Sales Professionals, recognizing that each of
@@ -116,16 +115,18 @@
                     Beyond
                 </h3>
                 <p>
-                    covering skilled
-                    Developers and vigilant
-                    Cybersecurity
-                    Consultants. We also
-                    excel in identifying and
-                    attracting dynamic
-                    Sales Professionals who
-                    play a pivotal role in
-                    driving your business
-                    forward.
+                    We specialize in recruiting skilled 
+developers
+ and vigilant cybersecurity 
+consultants. 
+Additionally, we have a proven 
+track record
+ of identifying and attracting 
+dynamic
+ sales professionals who play a 
+pivotal 
+role in driving your business 
+forward.
                 </p>
             </div>
             <div class="col-md-4 col-lg-3 border-right flex-space-between">
@@ -228,14 +229,14 @@
                         <div class="flex">
                             <h5>Countries</h5>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore minus, minima, id
-                                labore iusto ullam sed, ratione laborum rerum quaerat aperiam. Eaque aliquid, earum
-                                repellendus iure! Exercitationem?
+                                Nestalent Consulting strategically positioned in the UAE, 
+                                provides access to diverse language speakers in English, French and Arabic along with
+                                 cutting-edge technologies, serving the GCC, Middle East, France and Benelux regions.
                             </p>
 
                         </div>
                     </div>
-                    <div class="fiex-row">
+                    <!--<div class="fiex-row">
                         <i class="fa-sharp icon fa-solid fa-certificate " style="color: #86d6d7;"></i>
                         <div class="flex">
                             <h5>Years Experience</h5>
@@ -246,15 +247,19 @@
                             </p>
 
                         </div>
-                    </div>
+                    </div>-->
                     <div class="fiex-row">
                         <i class="fa-sharp icon fa-solid fa-thumbs-up " style="color: #86d6d7;"></i>
                         <div class="flex">
                             <h5>Clients</h5>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore minus, minima, id
-                                labore iusto ullam sed, ratione laborum rerum quaerat aperiam. Eaque aliquid, earum
-                                repellendus iure! Exercitationem?
+                                We proudly serve esteemed clients
+                                across a spectrum of industries,
+                                including oil and gas, digital transformation, 
+                               defense, and cybersecurity.
+                                With our specialized expertise, 
+                               we deliver tailored recruitment solutions
+                                to meet the unique needs of each sector.
                             </p>
 
                         </div>
@@ -264,9 +269,12 @@
                         <div class="flex">
                             <h5>Candidates</h5>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore minus, minima, id
-                                labore iusto ullam sed, ratione laborum rerum quaerat aperiam. Eaque aliquid, earum
-                                repellendus iure! Exercitationem?
+                                Nestalent takes pride in maintaining a vast pool of over 3000 
+qualified candidates with diverse backgrounds and fluency in 
+English, French, and Arabic. This rich talent reservoir enables us 
+to seamlessly match your specific requirements with top-notch 
+professionals, ensuring the perfect fit for your organization's 
+needs
                             </p>
 
                         </div>
@@ -290,7 +298,7 @@
                     <img class="card-img-top" src="images/4.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Perminant Recruitment</h5>
-                        <p class="card-text">SECURING LASTING TALENT FOR YOUR ORGANIZATION.
+                        <p class="card-text">Securing lasting talent for your organization.
                         </p>
 
                     </div>
@@ -301,7 +309,7 @@
                     <img class="card-img-top" src="images/4.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Contract Recruitment</h5>
-                        <p class="card-text">FLEXIBLE SOLUTIONS TO MATCH SHORT-TERM NEEDS.
+                        <p class="card-text">Flexible solutions to match short-term needs.
                         </p>
 
                     </div>
@@ -312,7 +320,7 @@
                     <img class="card-img-top" src="images/4.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Freelancer & Project-Based Placements</h5>
-                        <p class="card-text">CONNECTING SPECIALIZED FREELANCERS TO PROJECT DEMANDS.
+                        <p class="card-text">Connecting specialized freelancers to project demands.
                         </p>
 
                     </div>
@@ -356,7 +364,7 @@
             <div class="circle">
                 <b>Candidate Identification</b>
                 <br>
-                Utilizing cutting-edge tools tp pinpoint Ideal candidates.
+                Utilizing cutting-edge tools to pinpoint Ideal candidates.
             </div>
             <div class="circle">
                 <b>Evaluation and Matchmaking</b>
@@ -371,7 +379,7 @@
             <div class="circle">
                 <b>Ongoing Support</b>
                 <br>
-                Providing support during the onboarding process and beyong.
+                Providing support during the onboarding process and beyond.
             </div>
         </div>
     </div>
@@ -386,7 +394,7 @@
             </div>
             <div class="col-md-6">
                 <div class="flex-vis">
-                    <h1>Our Vision</h1>
+                    <h1>Our Values</h1>
                     <h3>
                         Expansive Network, Endless Opportunities
                     </h3>
@@ -408,7 +416,7 @@
                 <img src="images/logo.jpg" width="200" alt="">
             </div>
             <h2>
-                NEILA SEDDAR
+                
             </h2>
             <h2>
                 <a href="mailto:seddar.neilaA@gmail.com"><i class="fa-solid fa-envelope fa-lg"
