--- a/index.html
+++ b/index.html
@@ -394,17 +394,34 @@ needs
             </div>
             <div class="col-md-6">
                 <div class="flex-vis">
-                    <h1>Our Values</h1>
                     <h3>
-                        Expansive Network, Endless Opportunities
+                        Sustainable recruitment
                     </h3>
                     <p>
-                        At Nestalent Consulting, we aim to redefine the recruitment landscape by fostering a global
-                        culture that seamlessly connects talent across Asia, the Middle East, and Europe. With a diverse
-                        pool of skilled professionals spanning continents, our goal is to set the standard for
-                        personalized talent acquisition, uniting this wealth of candidates with organizations worldwide.
-                        We aspire to create a worldwide network founded on trust, innovation, and mutual success,
-                        redefining the way talent meets opportunity.​
+                        We prioritize sustainable recruitment ethics. Our 
+approach is rooted in building long-term 
+relationships with both clients and candidates, 
+ensuring that placements benefit everyone 
+involved. We actively promote diversity and 
+inclusion in our recruitment processes, striving to 
+create fair and respectful opportunities for all. By 
+advocating for ethical practices and transparency, 
+we uphold the highest standards of integrity in 
+every aspect of our work.​
+                    </p>
+                    <h3>
+                        Data protection
+                    </h3>
+                    <p>
+                        We are committed to safeguarding the privacy and security of 
+personal data belonging to both our candidates and clients. 
+Adhering to stringent data protection regulations and industry 
+best practices, we employ robust encryption measures and 
+access controls to ensure that sensitive information is handled 
+with the utmost care and confidentiality. Our transparent 
+approach to data handling empowers individuals to have 
+control over their personal information while building trust and 
+confidence in our services.​
                     </p>
                 </div>
             </div>
@@ -415,20 +432,12 @@ needs
             <div class="flex-row-footer">
                 <img src="images/logo.jpg" width="200" alt="">
             </div>
-            <h2>
-                
-            </h2>
-            <h2>
-                <a href="mailto:seddar.neilaA@gmail.com"><i class="fa-solid fa-envelope fa-lg"
-                        style="color: #ffffff;"></i>
-                    seddar.neilaA@gmail.com</a>
-            </h2>
-            <h2>
-                <i class="fa-solid fa-phone fa-lg" style="color: #ffffff;"></i> +971 52 341 2515
-            </h2>
-            <h2>
-                <i class="fa-solid fa-location-dot fa-lg" style="color: #ffffff;"></i> Dubai - Dubai
-            </h2>
+            <h6 style="color: white;text-align: center;">
+                Contact us today<br />
+                For customers: <a href=mailto:contact@nestalent.com>contact@nestalent.com</a><br />
+                For candidates: <a href=mailto:recruitment@nestalent.com>recruitment@nestalent.com</a><br />
+                Tel: +971 52 621 63 49<br />
+            </h6>
         </div>
     </footer>
     <script>
