--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
     </div>
     <div class="container mt-12" id="why-nestalent">
         <div class="row section">
-            <img src="images/wave.png" class="image-position" alt="">
-            <img src="images/wave.png" class="image-position-bottom" alt="">
+            <img src="images/wave.png" style="visibility: hidden;"class="image-position" alt="">
+            <img src="images/wave.png" style="visibility: hidden;"class="image-position-bottom" alt="">
             <div class="col-md-12 mb-12">
                 <h1 class="title">
                     Why Nestalent Consulting for International Recruitment
@@ -286,8 +286,8 @@ needs
     <div class="container " style="margin-top:6rem;" id="services">
         <div class="row section">
             <hr>
-            <img src="images/wave.png" class="image-position" alt="">
-            <img src="images/wave.png" class="image-position-bottom" alt="">
+            <img src="images/wave.png" style="visibility: hidden;"class="image-position" alt="">
+            <img src="images/wave.png" style="visibility: hidden;"class="image-position-bottom" alt="">
             <div class="col-md-12 mb-12" style="margin-top: 2rem;">
                 <h1 class="title">
                     Our Services
@@ -295,7 +295,7 @@ needs
             </div>
             <div class="col-lg-3 col-md-4  border-right">
                 <div class="card">
-                    <img class="card-img-top" src="images/4.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="images/i01.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Perminant Recruitment</h5>
                         <p class="card-text">Securing lasting talent for your organization.
@@ -306,7 +306,7 @@ needs
             </div>
             <div class="col-lg-3 col-md-4  border-right">
                 <div class="card">
-                    <img class="card-img-top" src="images/4.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="images/i04.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Contract Recruitment</h5>
                         <p class="card-text">Flexible solutions to match short-term needs.
@@ -317,7 +317,8 @@ needs
             </div>
             <div class="col-lg-3 col-md-4  border-right">
                 <div class="card">
-                    <img class="card-img-top" src="images/4.jpg" alt="Card image cap">
+                    <div style></div>
+                    <img class="card-img-top" src="images/i03.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Freelancer & Project-Based Placements</h5>
                         <p class="card-text">Connecting specialized freelancers to project demands.
@@ -328,7 +329,7 @@ needs
             </div>
             <div class="col-lg-3 col-md-4  border-right">
                 <div class="card">
-                    <img class="card-img-top" src="images/4.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="images/i02.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Management Consulting</h5>
                         <p class="card-text">Elevate your business with Nestalent Consulting's
@@ -387,12 +388,6 @@ needs
     <div class="container mt-14" id="vision">
         <div class="row">
             <div class="col-md-6">
-                <div class="vis">
-
-                </div>
-
-            </div>
-            <div class="col-md-6">
                 <div class="flex-vis">
                     <h3>
                         Sustainable recruitment
@@ -409,6 +404,10 @@ advocating for ethical practices and transparency,
 we uphold the highest standards of integrity in 
 every aspect of our work.​
                     </p>
+                    </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="flex-vis">
                     <h3>
                         Data protection
                     </h3>
