--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </li>
            
                 <li class="nav-item">
-                    <a class="nav-link" href="#services">Our values</a>
+                    <a class="nav-link" href="#services">Our Services</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#methodology">Our Methodology</a>
@@ -297,7 +297,7 @@ needs
                 <div class="card">
                     <img class="card-img-top" src="images/i01.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Perminant Recruitment</h5>
+                        <h5 class="card-title">Permanent Recruitment</h5>
                         <p class="card-text">Securing lasting talent for your organization.
                         </p>
 
@@ -331,15 +331,8 @@ needs
                 <div class="card">
                     <img class="card-img-top" src="images/i02.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Management Consulting</h5>
-                        <p class="card-text">Elevate your business with Nestalent Consulting's
-                            tailored management consulting services. From
-                            strategic planning to performance improvement,
-                            our seasoned consultants collaborate with you
-                            for lasting results. Choose us for our proven track
-                            record and collaborative approach. Contact us to
-                            drive strategic growth and innovation in your
-                            organization.
+                        <h5 class="card-title">Nestalent Consulting</h5>
+                        <p class="card-text">Elevate with tailored management consulting for strategic growth and innovation. 
                         </p>
 
                     </div>
