--- a/index.html
+++ b/index.html
@@ -380,7 +380,12 @@ needs
     <hr>
     <div class="container mt-14" id="vision">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
+                <div class="vis">
+
+                </div>
+            </div>
+            <div class="col-md-4">
                 <div class="flex-vis">
                     <h3>
                         Sustainable recruitment
@@ -399,7 +404,7 @@ every aspect of our work.​
                     </p>
                     </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <div class="flex-vis">
                     <h3>
                         Data protection
