--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ forward.
             </div>
             <div class="col-md-4 col-lg-3   border-right flex-space-between">
                 <h3>
-                 Reach all over the Glob
+                 Reach all over the Globe
                 </h3>
                 <p>
                     Nestalent operates
