--- a/index.html
+++ b/index.html
@@ -380,10 +380,8 @@ needs
     <hr>
     <div class="container mt-14" id="vision">
         <div class="row">
-            <div class="col-md-4">
-                <div class="vis">
-
-                </div>
+            <div class="col-md-4" style="display:flex">
+                <div class="vis"></div>
             </div>
             <div class="col-md-4">
                 <div class="flex-vis">
